<?xml version="1.0" encoding="utf-8"?><!--Ingredients Container-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ingredients_container_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/step_details_margin_top"/>
